# final_project

./: ._quarto.yml.swp  .gitignore  Documentation.qmd  Tutorial.qmd  _quarto.yml  clean_weekly_stock_data.csv  code.ipynb  index.qmd  main.py  pyproject.toml  requirements.txt  setup.py  streamlit.py  style.css  weekly_5yr_all_symbols.csv
data/: clean_weekly_stock_data.csv  weekly_5yr_all_symbols_pt_2.csv
docs/: Documentation.html  Tutorial.html  code.html  index.html  robots.txt  search.json  sitemap.xml  styles.css
docs/final_project/: quartostuff.html
final_project/: _quarto.yml  quartostuff.qmd
scripts/: clean_prices.py  quarto_setup.py
src/: analysis.py
src/final_project/: __init__.py  cleaning.py
src/stat386stonks/: __init__.py  clean_data.py  models.py  plots.py  read_data.py
