[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"


[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]
