[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"


[project]
name = "stat386stonks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]


[tool.setuptools.packages.find]
where = ["src"]

